styles: - bug fix: overflow-wrap: anywhere; for long email addresses

--- a/scss/enlist.scss
+++ b/scss/enlist.scss
@@ -134,6 +134,7 @@
   .pfy-enlist-admin {
     .pfy-enlist-email {
       margin-left: 1em;
+      overflow-wrap: anywhere;
     }
     .pfy-enlist-email::before {
       content: "<";
